--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="push"></div>
         <div class="landing-text">
             <h1 class="text-white text-center"><span class="pizz">Pizza </span><span class="exc">iN!</span></h1>
-            <h2 class="text-white text-center">Get your pizza in an instant.</h2>
+            <h2 class="text-white text-center">Surprise yourself with pizza  instantly.</h2>
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
