--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
     <div class="col-sm-12">
         <div class="row">
             <div class="col-sm-6">
-                <img src="images/sec/ab1.png" alt="chef-cartoon" class="karibu-img">
+                <img src="https://banner2.cleanpng.com/20180618/jvh/kisspng-sicilian-pizza-fast-food-chef-pizzaiole-pizzaiolo-5b28390d766764.739934491529362701485.jpg" alt="chef-cartoon" class="karibu-img">
             </div>
-            <div class="col-md-6 karibu-txt">
-                <h1 class="text-center txt txt-big">Karibu <span class="pizz">Pizza </span><span class="exc">pap!</span>
+            <div class="col-md-6 Welcome-txt">
+                <h1 class="text-center txt txt-big">--Welcome <span class="pizz">Pizza </span><span class="exc">IN!</span>
                 </h1>
                 <p class="text-center txt">The best pizza you'll ever taste</p>
                 <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
