--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-md-6 Welcome-txt">
                 <h1 class="text-center txt txt-big">--Welcome <span class="pizz">Pizza </span><span class="exc">IN!</span>
                 </h1>
-                <p class="text-center txt">The best pizza you'll ever taste</p>
+                <p class="text-center txt">The best pizza you'll ever wish to taste</p>
                 <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
                 <a href="#menus">
                     <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
