added image in index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h1 class="text-center text-white" id="menu">Menu</h1>
         <div class="pizza-menu row text-center">
             <figure class="col-sm-4">
-                <img src="images/2.png" alt="small-pizza" class="wiggle">
+                <img src="https://www.seriouseats.com/images/2017/04/20170411-pizza-oven-testing-roccbox-best-1500x1125.jpg" alt="small-pizza" class="wiggle">
                 <figcaption class="text-white">Regular<br>Ksh. 300</figcaption>
             </figure>
             <figure class="col-sm-4">
