image in html file

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <figcaption class="text-white">Regular<br>Ksh. 300</figcaption>
             </figure>
             <figure class="col-sm-4">
-                <img src="images/1.png" alt="medium-pizza" class="wiggle">
+                <img src="https://www.oetker.in/Recipe/Recipes/oetker.in/in-en/baking/image-thumb__52711__RecipeDetail/pizza-pollo-arrosto.jpg" alt="medium-pizza" class="wiggle">
                 <figcaption class="text-white">Medium<br>Ksh. 600</figcaption>
             </figure>
             <figure class="col-sm-4">
