added image in html file

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <figcaption class="text-white">Medium<br>Ksh. 600</figcaption>
             </figure>
             <figure class="col-sm-4">
-                <img src="images/3.png" alt="large-pizza" class="wiggle">
+                <img src="https://img.grouponcdn.com/deal/3TKKfkjNj3f56SLd7oYWzAX8S6en/3T-2048x1229/v1/c700x420.jpg" alt="large-pizza" class="wiggle">
                 <figcaption class="text-white">Large<br>Ksh. 1200</figcaption>
             </figure>
         </div>
