added changes in html file

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </div>
 
 <div class="orders" id="order">
-    <h1 class="text-center" id="order-pizza">Order Pizza</h1>
+    <h1 class="text-center" id="order-pizza">Make a of Order Pizza</h1>
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8 order-overlay text-center">
@@ -115,7 +115,7 @@
                     <option value="vegtikka">Veg Tikka</option>
                     <option value="chickentikka">Chicken Tikka</option>
                     <option value="periperi">Peri-Peri Chicken</option>
-                    <option value="bbq">BBQ Steak</option>
+                    <option value="bbq">BBQ Steak</option>m
                     <option value="boerewors">Boerewors</option>
                     <option value="hawaiian">Hawaiian</option>
                     <option value="mushroom">Chicken and Mushroom</option>
