added changes in html file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizza App</title>
+    <title>Pizza iN</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Wicked css -->
@@ -24,7 +24,7 @@
 <body>
 <!--Start Navigation //-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-    <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a pap!</h1>
+    <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a IN!</h1>
     <div class="navi">
         <ul class="nav-items">
             <li><a href="#menus">Menu</a></li>
