--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="customerdata row">
             <div class="col-sm-3"></div>
             <form action="" class="form-group col-sm-6 data">
-                <input type="text" class="form-control cdata" placeholder="Enter your Name:">
+                <input type="text" class="form-control cdata" placeholder="Enter your Name:" required>
                 <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
                 <input type="text" class="form-control cdata" placeholder="Enter the location: ">
                 <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
