--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <form action="" class="form-group col-sm-6 data">
                 <input type="text" class="form-control cdata" placeholder="Enter your Name:" required>
                 <input type="text" class="form-control cdata" placeholder="Enter your phone number: " required>
-                <input type="text" class="form-control cdata" placeholder="Enter the location: ">
-                <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+                <input type="text" class="form-control cdata" placeholder="Enter the location: " required>
+                <button class="btn bg-info text-center d-block mx-auto go" >Make Delivery</button>
             </form>
 
             <div class="col-sm-3"></div>
