added changes in html file

--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
                 <input type="text" class="form-control cdata" placeholder="Enter your Name:" required>
                 <input type="text" class="form-control cdata" placeholder="Enter your phone number: " required>
                 <input type="text" class="form-control cdata" placeholder="Enter the location: " required>
-                <button class="btn bg-info text-center d-block mx-auto go" >Make Delivery</button>
+                <button class="btn bg-info text-center d-block mx-auto go" aria-required="" >Make Delivery</button>
             </form>
 
             <div class="col-sm-3"></div>
         </div>
     </div>
     <div class="d-block mx-auto text-center">
-        <button class='deliver'>Make Delivery</button>
-        <button class='delivernot'>Pick Up</button>
+        <button class='deliver' aria-required="">Make Delivery</button>
+        <button class='delivernot' >Pick Up</button>
     </div>
 </div>
 
