added changes in html file

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
     <div class="d-block mx-auto text-center">
         <button class='deliver' aria-required="">Make Delivery</button>
-        <button class='delivernot' >Pick Up</button>
+        <button class='delivernot'required >Pick Up</button>
     </div>
 </div>
 
