--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-5 subs">
-                <h1 class="text-white text-center"> Call Us </h1>
+                <h1 class="text-white text-center"> Call Us for your order @</h1>
                 <p class="text-center">+254 797089772</p>
                 <form>
                     <div class="email-info">
