added changes in html file

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             </form>
             <a href="#summary">
-                <button type="submit" class="btn btn-success checkout" id="checkout">
+                <button type="submit" class="btn btn-success checkout" id="checkout" aria-required="true">
                     Checkout
                 </button>
             </a>
