--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </form>
             <a href="#summary">
                 <button type="submit" class="btn btn-success checkout" id="checkout" aria-required="true">
-                    Checkout
+                checkout
                 </button>
             </a>
 
