--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="nav-items">
             <li><a href="#menus">Menu</a></li>
             <li><a href="#order">Orders</a></li>
-            <li><a href="#contact">Contacts</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 </nav>
