--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <ul class="nav-items">
             <li><a href="#menus">Menu</a></li>
             <li><a href="#order">Orders</a></li>
-            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -141,7 +140,7 @@
 
             </form>
             <a href="#summary">
-                <button type="submit" class="btn btn-success checkout" id="checkout" aria-required="true">
+                <button type="submit" class="btn btn-success checkout" id="checkout">
                 checkout
                 </button>
             </a>
