added changes in html file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a IN!</h1>
     <div class="navi">
         <ul class="nav-items">
+            <li><a href="#">Home</a></li>
             <li><a href="#menus">Menu</a></li>
             <li><a href="#order">Orders</a></li>
         </ul>
