--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <div class="overlay">
         <div id="push"></div>
         <div class="landing-text">
+            <h1 class="text-white text-center">WELCOME TO</h2>
+
             <h1 class="text-white text-center"><span class="pizz">Pizza </span><span class="exc">iN!</span></h1>
-            <h2 class="text-white text-center">Surprise yourself with pizza  instantly.</h2>
+            <h3 class="text-white text-center">Surprise yourself with pizza  instantly.</h3>
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
