added changes in html file and script.js

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </div>
 
 <div class="orders" id="order">
-    <h1 class="text-center" id="order-pizza">Make a of Order Pizza</h1>
+    <h1 class="text-center" id="order-pizza">Make  Order for Pizza</h1>
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8 order-overlay text-center">
